src/FinancialForce Accounting/objects/MassDeleteControlRecord__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>MassDeleteControlRecord</relationshipLabel>
        <relationshipName>MassDeleteControlRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BatchStatus__c</fullName>
        <label>Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobName__c</fullName>
        <label>JobName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotificationType__c</fullName>
        <formula>IF(AND(TotalNumberOfErrors__c=0,TotalNumberOfAborts__c=0,TotalNumberOfExternal__c=0), 
&apos;Successful&apos;, 
IF(TotalNumberOfErrors__c = TotalNumberOfLogs__c, 
&apos;Failure&apos;, 
IF(TotalNumberOfAborts__c &gt; 0, 
&apos;Failure&apos;, 
IF( TotalNumberOfExternal__c &gt; 0, 
&apos;Failure&apos;, 
&apos;Mixed&apos; 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberAttemptedToProcess__c</fullName>
        <label>Number of records attempted to Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfQueuableErrors__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Errors from Queuable Jobs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( NumberOfQueuableErrors__c = 0, 
			 	IF( TotalNumberOfRecordsDeleted__c =  NumberAttemptedToProcess__c, 
			 		&apos;Complete&apos;,
			 		&apos;Processing&apos;
			 	),
				&apos;Error&apos;
			)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfAborts__c</fullName>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>MassDeleteBatchLog__c.LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryForeignKey>MassDeleteBatchLog__c.MassDeleteControlRecord__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfErrors__c</fullName>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>MassDeleteBatchLog__c.LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>MassDeleteBatchLog__c.MassDeleteControlRecord__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfExternal__c</fullName>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>MassDeleteBatchLog__c.LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryForeignKey>MassDeleteBatchLog__c.MassDeleteControlRecord__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryForeignKey>MassDeleteBatchLog__c.MassDeleteControlRecord__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfRecordsDeleted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Number Of Records Deleted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>zDeprecated:Mass Delete Control Record</label>
    <nameField>
        <displayFormat>MDCRLog{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Delete Control Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>